name:                currency-query
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/torchhound/currency-query#readme
license:             BSD3
license-file:        LICENSE
author:              torchhound
maintainer:          torchhound
copyright:           torchhound
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable currency-query
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, aeson, bytestring, http-conduit
